<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Bridges" Id="{63d51cfb-8b83-4b2c-b732-11192bdf136e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// Landlord Buses
	bus_LL1_bridge			: FB_DALIBridge(Communication.aKL6821Communication[11]);
	bus_LL1_response		: ST_DALIBridgeResponse;
	bus_LL1_notification	: ST_DALIBridgeNotification;
	
	bus_LL2_bridge			: FB_DALIBridge(Communication.aKL6821Communication[12]);
	bus_LL2_response		: ST_DALIBridgeResponse;
	bus_LL2_notification	: ST_DALIBridgeNotification;
	
	bus_LL3_bridge			: FB_DALIBridge(Communication.aKL6821Communication[13]);
	bus_LL3_response		: ST_DALIBridgeResponse;
	bus_LL3_notification	: ST_DALIBridgeNotification;
	
	bus_LL4_bridge			: FB_DALIBridge(Communication.aKL6821Communication[14]);
	bus_LL4_response		: ST_DALIBridgeResponse;
	bus_LL4_notification	: ST_DALIBridgeNotification;
	
	bus_LL5_bridge			: FB_DALIBridge(Communication.aKL6821Communication[15]);
	bus_LL5_response		: ST_DALIBridgeResponse;
	bus_LL5_notification	: ST_DALIBridgeNotification;
	
	bus_LL6_bridge			: FB_DALIBridge(Communication.aKL6821Communication[16]);
	bus_LL6_response		: ST_DALIBridgeResponse;
	bus_LL6_notification	: ST_DALIBridgeNotification;
	
	// Life Safety Riser Bus
	bus_LS_bridge			: FB_DALIBridge(Communication.aKL6821Communication[10]);
	bus_LS_response			: ST_DALIBridgeResponse;
	bus_LS_notification		: ST_DALIBridgeNotification;
	
	// Tenant 1 Buses
	bus_T1_1_bridge			: FB_DALIBridge(Communication.aKL6821Communication[1]);
	bus_T1_1_response		: ST_DALIBridgeResponse;
	bus_T1_1_notification	: ST_DALIBridgeNotification;
	
	bus_T1_2_bridge			: FB_DALIBridge(Communication.aKL6821Communication[2]);
	bus_T1_2_response		: ST_DALIBridgeResponse;
	bus_T1_2_notification	: ST_DALIBridgeNotification;
	
	// Tenant 2 Buses
	bus_T2_1_bridge			: FB_DALIBridge(Communication.aKL6821Communication[3]);
	bus_T2_1_response		: ST_DALIBridgeResponse;
	bus_T2_1_notification	: ST_DALIBridgeNotification;
	
	bus_T2_2_bridge			: FB_DALIBridge(Communication.aKL6821Communication[4]);
	bus_T2_2_response		: ST_DALIBridgeResponse;
	bus_T2_2_notification	: ST_DALIBridgeNotification;
	
	bus_T2_3_bridge			: FB_DALIBridge(Communication.aKL6821Communication[5]);
	bus_T2_3_response		: ST_DALIBridgeResponse;
	bus_T2_3_notification	: ST_DALIBridgeNotification;
	
	// Tenant 3 Buses
	bus_T3_1_bridge			: FB_DALIBridge(Communication.aKL6821Communication[6]);
	bus_T3_1_response		: ST_DALIBridgeResponse;
	bus_T3_1_notification	: ST_DALIBridgeNotification;
	
	bus_T3_2_bridge			: FB_DALIBridge(Communication.aKL6821Communication[7]);
	bus_T3_2_response		: ST_DALIBridgeResponse;
	bus_T3_2_notification	: ST_DALIBridgeNotification;
	
	// Tenant 4 Buses
	bus_T4_1_bridge			: FB_DALIBridge(Communication.aKL6821Communication[8]);
	bus_T4_1_response		: ST_DALIBridgeResponse;
	bus_T4_1_notification	: ST_DALIBridgeNotification;
	
	bus_T4_2_bridge			: FB_DALIBridge(Communication.aKL6821Communication[9]);
	bus_T4_2_response		: ST_DALIBridgeResponse;
	bus_T4_2_notification	: ST_DALIBridgeNotification;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>