<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="MAIN" Id="{2314465b-fd04-462d-9225-7e86962c8e3f}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	emergency : BOOL := FALSE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[Tc3_DALI.GVL.eEventTraceLevel := TcEventSeverity.Verbose;

// Landlord buses
IF (GVL_Variant.numLLBus >= 1) THEN
    GVL_Bridges.bus_LL1_bridge(
        emergency:= emergency,
        rpcResponse     => GVL_Bridges.bus_LL1_response,
        notification=> GVL_Bridges.bus_LL1_notification
    );
END_IF
IF (GVL_Variant.numLLBus >= 2) THEN
    GVL_Bridges.bus_LL2_bridge(
        emergency:= emergency,
        rpcResponse     => GVL_Bridges.bus_LL2_response,
        notification=> GVL_Bridges.bus_LL2_notification
    );
END_IF
IF (GVL_Variant.numLLBus >= 3) THEN
    GVL_Bridges.bus_LL3_bridge(
        emergency:= emergency,
        rpcResponse     => GVL_Bridges.bus_LL3_response,
        notification=> GVL_Bridges.bus_LL3_notification
    );
END_IF
IF (GVL_Variant.numLLBus >= 4) THEN
    GVL_Bridges.bus_LL4_bridge(
        emergency:= emergency,
        rpcResponse     => GVL_Bridges.bus_LL4_response,
        notification=> GVL_Bridges.bus_LL4_notification
    );
END_IF
IF (GVL_Variant.numLLBus >= 5) THEN
    GVL_Bridges.bus_LL5_bridge(
        emergency:= emergency,
        rpcResponse     => GVL_Bridges.bus_LL5_response,
        notification=> GVL_Bridges.bus_LL5_notification
    );
END_IF
IF (GVL_Variant.numLLBus >= 6) THEN
    GVL_Bridges.bus_LL6_bridge(
        emergency:= emergency,
        rpcResponse     => GVL_Bridges.bus_LL6_response,
        notification=> GVL_Bridges.bus_LL6_notification
    );
END_IF

// Tenant 1
IF (GVL_Variant.numT1Bus >= 1) THEN
        GVL_Bridges.bus_T1_1_bridge(
                emergency:= emergency,
                rpcResponse=> GVL_Bridges.bus_T1_1_response,
                notification=> GVL_Bridges.bus_T1_1_notification
        );
END_IF
IF (GVL_Variant.numT1Bus >= 2) THEN
        GVL_Bridges.bus_T1_2_bridge(
                emergency:= emergency,
                rpcResponse=> GVL_Bridges.bus_T1_2_response,
                notification=> GVL_Bridges.bus_T1_2_notification
        );
END_IF

// Tenant 2
IF (GVL_Variant.numT2Bus >= 1) THEN
        GVL_Bridges.bus_T2_1_bridge(
                emergency:= emergency,
                rpcResponse=> GVL_Bridges.bus_T2_1_response,
                notification=> GVL_Bridges.bus_T2_1_notification
        );
END_IF
IF (GVL_Variant.numT2Bus >= 2) THEN
        GVL_Bridges.bus_T2_2_bridge(
                emergency:= emergency,
                rpcResponse=> GVL_Bridges.bus_T2_2_response,
                notification=> GVL_Bridges.bus_T2_2_notification
        );
END_IF
IF (GVL_Variant.numT2Bus >= 3) THEN
        GVL_Bridges.bus_T2_3_bridge(
                emergency:= emergency,
                rpcResponse=> GVL_Bridges.bus_T2_3_response,
                notification=> GVL_Bridges.bus_T2_3_notification
        );
END_IF

// Tenant 3
IF (GVL_Variant.numT3Bus >= 1) THEN
        GVL_Bridges.bus_T3_1_bridge(
                emergency:= emergency,
                rpcResponse=> GVL_Bridges.bus_T3_1_response,
                notification=> GVL_Bridges.bus_T3_1_notification
        );
END_IF
IF (GVL_Variant.numT3Bus >= 2) THEN
        GVL_Bridges.bus_T3_2_bridge(
                emergency:= emergency,
                rpcResponse=> GVL_Bridges.bus_T3_2_response,
                notification=> GVL_Bridges.bus_T3_2_notification
        );
END_IF

// Tenant 4
IF (GVL_Variant.numT4Bus >= 1) THEN
        GVL_Bridges.bus_T4_1_bridge(
                emergency:= emergency,
                rpcResponse=> GVL_Bridges.bus_T4_1_response,
                notification=> GVL_Bridges.bus_T4_1_notification
        );
END_IF
IF (GVL_Variant.numT4Bus >= 2) THEN
        GVL_Bridges.bus_T4_2_bridge(
                emergency:= emergency,
                rpcResponse=> GVL_Bridges.bus_T4_2_response,
                notification=> GVL_Bridges.bus_T4_2_notification
        );
END_IF

// Life Safety Riser
IF (GVL_Variant.hasLSBus) THEN
	GVL_Bridges.bus_LS_bridge(
		emergency		:= emergency,
		rpcResponse		=> GVL_Bridges.bus_LS_response,
		notification	=> GVL_Bridges.bus_LS_notification
	);
END_IF]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="8" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="94" Count="40" />
      <LineId Id="17" Count="0" />
      <LineId Id="136" Count="0" />
      <LineId Id="213" Count="68" />
      <LineId Id="139" Count="0" />
      <LineId Id="283" Count="0" />
      <LineId Id="282" Count="0" />
      <LineId Id="284" Count="1" />
      <LineId Id="287" Count="0" />
      <LineId Id="289" Count="1" />
      <LineId Id="288" Count="0" />
      <LineId Id="286" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>